--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "firebase": "^10.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-loader-spinner": "^5.3.4",
     "react-router-dom": "^6.14.2",
     "sweetalert2": "^11.7.20"
   },
